# VarjoOpenIris

./: .gitignore  README.md
c#/: VarjoOpenIrisDotNetApp.sln
c#/VarjoOpenIrisDotNetApp/: Form1.Designer.cs  Form1.cs  Program.cs  VarjoOpenIrisDotNetApp.csproj
c#/VarjoOpenIrisPlugin/: CameraEyeVarjo.cs  Class1.cs  EyeTrackingSystemVarjo.cs  VarjoDLL.cs  VarjoOpenIrisPlugin.csproj
c#/VarjoOpenIrisPluginFramework/: CameraEyeVarjo.cs  Class1.cs  EyeTrackingSystemVarjo.cs  VarjoDLL.cs  VarjoOpenIrisPluginFramework.csproj
c#/VarjoOpenIrisPluginFramework/Properties/: AssemblyInfo.cs
c#/VarjoOpenIrisTestAppFramework/: Form1.Designer.cs  Form1.cs  Program.cs  VarjoOpenIrisTestAppFramework.csproj  packages.config
c#/VarjoOpenIrisTestAppFramework/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: CMakeLists.txt  CMakeSettings.json
src/VarjoOpenIrisLib/: CMakeLists.txt  EyeCameraStream.cpp  EyeCameraStream.hpp  FPSCalculator.cpp  FPSCalculator.hpp  IApplication.hpp  OpenIrisInterface.cpp  OpenIrisInterface.h  Session.hpp  StreamingApplication.cpp  StreamingApplication.hpp  UIApplication.cpp  UIApplication.hpp
src/VarjoOpenIrisTestApp/: CMakeLists.txt  main.cpp
